# CodeManifest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.claude/skills/execute-operations-config/: SKILL.md
.claude/skills/generate-operations-config/: SKILL.md
.claude/skills/validate-operations-config/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: 01-simple-edit.json  02-multi-file-edit.json  03-file-operations.json  04-modern-code-edit.json  05-all-edit-actions.json
examples/sample/: app.py  config.json  old-util.py
prompts/: README.md  integration-test.md  setup-chatgpt.md  setup-claude-code.md  setup-copilot.md  setup-cursor.md  setup-universal.md
scripts/: execute-json-ops.py  restore-backup.py  shared.py  validate-config-json.py
skills/: README.md  execute-operations-config.md  generate-operations-config.md  validate-operations-config.md
templates/: AGENTS.md.template  CLAUDE.md.template
tests/: conftest.py  test_executor.py  test_integration.py  test_restore.py  test_validator.py
