[project]
name = "codemanifest"
version = "3.0.0"
description = "Declarative execution engine for AI-assisted code changes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Omar Mokhtar"},
]
keywords = ["ai", "code-generation", "json", "ops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
validation = ["jsonschema"]
dev = ["pytest", "coverage", "ruff", "jsonschema"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
fail_under = 75
